--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,70 +17,78 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<!-- Navbar -->
-		<div class="flex justify-end items-center space-x-4 px-4 text-sm">
-			<a
-				href="#contact"
-				class="flex text-gray-400 font-semibold hover:text-green-700 text-2xl items-center gap-1"
+		<div class="sticky top-0 z-50">
+			<!-- Navbar -->
+			<div
+				class="flex justify-end items-center space-x-4 px-4 text-sm bg-white h-8"
 			>
-				CONTACT US
-				<Contact className="w-6 h-6" />
-			</a>
-		</div>
-		<div
-			class="mx-auto flex bg-white w-full justify-between items-center px-4 h-10"
-		>
-			<div class="flex items-center gap-2">
-				<h1 class="text-lg font-bold text-green-700">logo</h1>
-				<!-- Jika untuk gambar -->
-				<!-- <img src={astro.src} alt="Logo" class="h-10 w-14" /> -->
-				<!-- Jika untuk icon -->
-				<!-- <img src="/favicon.svg" alt="Logo" class="h-10 w-14" /> -->
-				<span class="font-bold text-xl">Embek Probolinggo Farm</span>
+				<a
+					href="#contact"
+					class="flex text-gray-400 font-semibold hover:text-green-700 text-2xl items-center gap-1"
+				>
+					CONTACT US
+					<Contact className="w-6 h-6" />
+				</a>
+			</div>
+			<div
+				class="mx-auto flex bg-white w-full justify-between items-center px-4 h-10"
+			>
+				<div class="flex items-center gap-2">
+					<h1 class="text-lg font-bold text-green-700">logo</h1>
+					<!-- Jika untuk gambar -->
+					<!-- <img src={astro.src} alt="Logo" class="h-10 w-14" /> -->
+					<!-- Jika untuk icon -->
+					<!-- <img src="/favicon.svg" alt="Logo" class="h-10 w-14" /> -->
+					<span class="font-bold text-xl">Embek Probolinggo Farm</span
+					>
+				</div>
+
+				<nav class="hidden md:flex gap-6">
+					<a
+						href="#about"
+						class="text-gray-700 hover:text-green-700 font-semibold text-lg"
+						>ABOUT</a
+					>
+					<a
+						href="#services"
+						class="text-gray-700 hover:text-green-700 font-semibold text-lg"
+						>PRODUCT</a
+					>
+					<a
+						href="#contact"
+						class="text-gray-700 hover:text-green-700 font-semibold text-lg"
+						>EVENT</a
+					>
+				</nav>
+
+				<!-- Hamburger Button from React To Mobile -->
+				<Hamburger targetId="mobileMenu" client:load />
 			</div>
 
-			<nav class="hidden md:flex gap-6">
+			<!-- Mobile Menu -->
+			<div
+				id="mobileMenu"
+				class="md:hidden max-h-0 overflow-hidden transition-all duration-500 ease-in-out bg-transparent px-4 space-y-2"
+			>
 				<a
 					href="#about"
-					class="text-gray-700 hover:text-green-700 font-semibold text-lg"
+					class="block py-2 hover:text-green-700 font-semibold"
 					>ABOUT</a
 				>
 				<a
 					href="#services"
-					class="text-gray-700 hover:text-green-700 font-semibold text-lg"
+					class="block py-2 hover:text-green-700 font-semibold"
 					>PRODUCT</a
 				>
 				<a
-					href="#contact"
-					class="text-gray-700 hover:text-green-700 font-semibold text-lg"
+					href="#event"
+					class="block py-2 hover:text-green-700 font-semibold"
 					>EVENT</a
 				>
-			</nav>
-
-			<!-- Hamburger Button from React To Mobile -->
-			<Hamburger targetId="mobileMenu" client:load />
+			</div>
 		</div>
-
-		<!-- Mobile Menu -->
-		<div
-			id="mobileMenu"
-			class="md:hidden max-h-0 overflow-hidden transition-all duration-500 ease-in-out bg-transparent px-4 space-y-2"
-		>
-			<a
-				href="#about"
-				class="block py-2 hover:text-green-700 font-semibold">ABOUT</a
-			>
-			<a
-				href="#services"
-				class="block py-2 hover:text-green-700 font-semibold">PRODUCT</a
-			>
-			<a
-				href="#event"
-				class="block py-2 hover:text-green-700 font-semibold">EVENT</a
-			>
-		</div>
+		<main>
+			<slot />
+		</main>
 	</body>
-	<main>
-		<slot />
-	</main>
 </html>
