feat: up card group

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -40,9 +40,14 @@ import { Contact } from "lucide-react";
                 >PRODUCT</a
             ><span>|</span>
             <a
-                href="#contact"
+                href="#breeding"
                 class="text-gray-600 hover:text-green-900 font-semibold text-lg"
-                >EVENT</a
+                >breeding</a
+            ><span>|</span>
+            <a
+                href="#meat"
+                class="text-gray-600 hover:text-green-900 font-semibold text-lg"
+                >meat</a
             >
         </nav>
 
@@ -53,17 +58,21 @@ import { Contact } from "lucide-react";
     <!-- Mobile Menu -->
     <div
         id="mobileMenu"
-        class="md:hidden max-h-0 overflow-hidden transition-all duration-500 ease-in-out bg-transparent px-4 space-y-2 font-bebas"
+        class="md:hidden max-h-0 overflow-hidden transition-all duration-500 ease-in-out bg-white px-4 space-y-2 font-bebas"
     >
-        <a href="#about" class="block py-2 hover:text-green-700 font-semibold"
+        <a href="/About" class="block py-2 hover:text-green-700 font-semibold"
             >ABOUT</a
         >
         <a
             href="#services"
             class="block py-2 hover:text-green-700 font-semibold">PRODUCT</a
         >
-        <a href="#event" class="block py-2 hover:text-green-700 font-semibold"
-            >EVENT</a
+        <a
+            href="#breeding"
+            class="block py-2 hover:text-green-700 font-semibold">breeding</a
+        >
+        <a href="#meat" class="block py-2 hover:text-green-700 font-semibold"
+            >Meat</a
         >
     </div>
 </div>
