--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,6 @@ import Navbar from "../components/Navbar.astro";
 import deadpool from "../assets/deadpoll.jpg";
 import Card from "../components/Card.astro";
 import MainCard from "../components/MainCard.astro";
-
 const title = "Home Page";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -33,7 +32,7 @@ const title = "Home Page";
 			</h1>
 		</div>
 	</div>
-
+	<!-- <MainCard2 /> -->
 	<div class="max-w-7xl mx-auto p-6 -mt-25">
 		<MainCard />
 	</div>
