--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,10 +24,10 @@ const title = "Home Page";
 		<div
 			class="relative flex flex-col items-center justify-center h-full font-bebas"
 		>
-			<h1 class="text-green-900 text-6xl font-bold text-center">
+			<h1 class="text-green-800 text-6xl font-bold text-center">
 				make your move today
 			</h1>
-			<h1 class="text-green-900 text-4xl font-semibold">
+			<h1 class="text-green-800 text-4xl font-semibold">
 				fresh in our farm
 			</h1>
 		</div>
@@ -37,4 +37,50 @@ const title = "Home Page";
 		<MainCard />
 	</div>
 	<Card />
+	<div class="relative h-72 w-full mt-40">
+		<div
+			class="absolute inset-0 bg-cover bg-center opacity-50"
+			style={`background-image: url(${deadpool.src})`}
+		>
+		</div>
+		<div class="absolute inset-0 bg-gradient-to-t from-white"></div>
+	</div>
+	<div
+		class="flex flex-col items-start text-start uppercase font-extrabold leading-tight px-5 my-2 font-bebas text-green-800 absolute -mt-96"
+	>
+		<span>|</span>
+		<h2 class="text-4xl">2025 impact</h2>
+		<h2 class="text-4xl">impact-driven</h2>
+	</div>
+	<div
+		class="flex justify-center items-center text-center gap-4 py-5 px-5 -mt-70 absolute"
+	>
+		<div class="rounded-xl bg-amber-300 max-w-xl mx-auto -mt-12 lg:mt-12">
+			<h2>hai</h2>
+			<p>
+				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime
+				porro fuga molestias ullam quo ipsa est cumque officiis id quis
+				perferendis tempora, dolores voluptatum tenetur sequi quas
+				libero placeat accusamus.
+			</p>
+		</div>
+		<div class="rounded-xl bg-amber-300 max-w-xl mx-auto -mt-12 lg:mt-12">
+			<h2>hai</h2>
+			<p>
+				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime
+				porro fuga molestias ullam quo ipsa est cumque officiis id quis
+				perferendis tempora, dolores voluptatum tenetur sequi quas
+				libero placeat accusamus.
+			</p>
+		</div>
+		<div class="rounded-xl bg-amber-300 max-w-xl mx-auto -mt-12 lg:mt-12">
+			<h2>hai</h2>
+			<p>
+				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime
+				porro fuga molestias ullam quo ipsa est cumque officiis id quis
+				perferendis tempora, dolores voluptatum tenetur sequi quas
+				libero placeat accusamus.
+			</p>
+		</div>
+	</div>
 </Layout>
