feat: sumbiting footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,6 @@ import deadpool from "../assets/deadpoll.jpg";
 import Card from "../components/Card.astro";
 import MainCard from "../components/MainCard.astro";
 const title = "Home Page";
-import { Handshake } from "lucide-react";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
@@ -46,9 +45,9 @@ import { Handshake } from "lucide-react";
 		</div>
 		<div class="absolute inset-0 bg-gradient-to-t from-white"></div>
 
-		<div class="absolute inset-0 flex flex-col justify-center px-5 -mt-96">
+		<div class="absolute inset-0 flex flex-col justify-center px-5 -mt-110">
 			<div
-				class="uppercase font-extrabold leading-tight font-bebas text-green-800"
+				class="uppercase font-extrabold leading-tight font-bebas text-green-800 text-5xl"
 			>
 				<span>|</span>
 				<h2 class="text-2xl sm:text-3xl md:text-4xl">2025 impact</h2>
