--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,3 +1,11 @@
 ---
-
+// import Layout from "../layouts/Layout.astro";
 ---
+
+<div slot="footer">
+    <div class="bg-green-700 text-white flex items-center justify-center py-4">
+        <p class="text-sm">
+            &copy; {new Date().getFullYear()} Embek Probolinggo Farm
+        </p>
+    </div>
+</div>
