--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Navbar from "../components/Navbar.astro";
 import deadpool from "../assets/deadpoll.jpg";
 import Card from "../components/Card.astro";
 import MainCard from "../components/MainCard.astro";
+import Footer from "../components/footer.astro";
 const title = "Home Page";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -59,14 +60,17 @@ const title = "Home Page";
 	<div
 		class="flex flex-col lg:flex-row justify-center items-center gap-4 py-10 px-5 relative -mt-65 text-center"
 	>
-		<div class="rounded-xl bg-amber-300 w-full lg:max-w-sm p-6">
+		<div class="rounded-xl bg-green-700 w-full lg:max-w-sm p-6">
 			<h2 class="font-bold mb-3">
 				<span
 					class="inline-block w-30 h-30 bg-center bg-contain bg-no-repeat"
-					style="background-image: url('/handshake.png')"></span>
+					style="background-image: url('/handshake.png'); filter: invert(66%) sepia(39%) saturate(560%) hue-rotate(130deg) brightness(95%) contrast(90%);"
+				></span>
 			</h2>
-			<h2 class="font-bold mb-3 text-4xl font-bebas">world</h2>
-			<p class="flex-1">
+			<h2 class="font-bold mb-3 text-4xl font-bebas text-teal-400">
+				world
+			</h2>
+			<p class="flex-1 text-teal-400">
 				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum,
 				alias aut molestiae in optio laudantium facilis cum velit
 				tenetur enim soluta tempora, voluptas culpa neque saepe ex quis
@@ -81,15 +85,17 @@ const title = "Home Page";
 				doloremque voluptate ipsam?
 			</p>
 		</div>
-		<div class="rounded-xl bg-amber-300 w-full lg:max-w-sm p-6">
+		<div class="rounded-xl bg-blue-300 w-full lg:max-w-sm p-6">
 			<h2 class="font-bold mb-3">
 				<span
 					class="inline-block w-30 h-30 bg-center bg-contain bg-no-repeat"
-					style="background-image: url('/health-insurance.png')"
+					style="background-image: url('/health-insurance.png'); filter: invert(35%) sepia(88%) saturate(467%) hue-rotate(86deg) brightness(92%) contrast(97%);"
 				></span>
 			</h2>
-			<h2 class="font-bold mb-3 text-4xl font-bebas">health</h2>
-			<p class="flex-1">
+			<h2 class="font-bold mb-3 text-4xl font-bebas text-green-700">
+				health
+			</h2>
+			<p class="flex-1 text-green-700">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
 				ab ipsa, dolor voluptas rem error enim consequuntur natus sequi
 				ex suscipit, aliquid, exercitationem eligendi nisi eum fugiat
@@ -104,14 +110,17 @@ const title = "Home Page";
 				rem cupiditate labore.
 			</p>
 		</div>
-		<div class="rounded-xl bg-amber-300 w-full lg:max-w-sm p-6">
+		<div class="rounded-xl bg-amber-600 w-full lg:max-w-sm p-6">
 			<h2 class="font-bold mb-3">
 				<span
 					class="inline-block w-30 h-30 bg-center bg-contain bg-no-repeat"
-					style="background-image: url('/cash-flow.png')"></span>
+					style="background-image: url('/cash-flow.png'); filter: invert(75%) sepia(65%) saturate(570%) hue-rotate(30deg) brightness(92%) contrast(92%);"
+				></span>
 			</h2>
-			<h2 class="font-bold mb-3 text-4xl font-bebas">economy</h2>
-			<p class="flex-1">
+			<h2 class="font-bold mb-3 text-4xl font-bebas text-lime-500">
+				economy
+			</h2>
+			<p class="flex-1 text-lime-500">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
 				ab ipsa, dolor voluptas rem error enim consequuntur natus sequi
 				ex suscipit, aliquid, exercitationem eligendi nisi eum fugiat
@@ -127,4 +136,5 @@ const title = "Home Page";
 			</p>
 		</div>
 	</div>
+	<Footer />
 </Layout>
