--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import deadpool from "../assets/deadpoll.jpg";
 import Card from "../components/Card.astro";
 import MainCard from "../components/MainCard.astro";
 import Footer from "../components/footer.astro";
+import Location from "../components/Location.astro";
 const title = "Home Page";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -50,7 +51,7 @@ const title = "Home Page";
 			<div
 				class="uppercase font-extrabold leading-tight font-bebas text-green-800 text-5xl"
 			>
-				<span>|</span>
+				<span class="text-2xl sm:text-3xl md:text-4xl">|</span>
 				<h2 class="text-2xl sm:text-3xl md:text-4xl">2025 impact</h2>
 				<h2 class="text-2xl sm:text-3xl md:text-4xl">impact-driven</h2>
 			</div>
@@ -60,7 +61,7 @@ const title = "Home Page";
 	<div
 		class="flex flex-col lg:flex-row justify-center items-center gap-4 py-10 px-5 relative -mt-65 text-center"
 	>
-		<div class="rounded-xl bg-green-700 w-full lg:max-w-sm p-6">
+		<div class="rounded-xl bg-green-700 w-full lg:max-w-sm p-6 shadow-2xl">
 			<h2 class="font-bold mb-3">
 				<span
 					class="inline-block w-30 h-30 bg-center bg-contain bg-no-repeat"
@@ -85,7 +86,7 @@ const title = "Home Page";
 				doloremque voluptate ipsam?
 			</p>
 		</div>
-		<div class="rounded-xl bg-blue-300 w-full lg:max-w-sm p-6">
+		<div class="rounded-xl bg-blue-300 w-full lg:max-w-sm p-6 shadow-2xl">
 			<h2 class="font-bold mb-3">
 				<span
 					class="inline-block w-30 h-30 bg-center bg-contain bg-no-repeat"
@@ -110,7 +111,7 @@ const title = "Home Page";
 				rem cupiditate labore.
 			</p>
 		</div>
-		<div class="rounded-xl bg-amber-600 w-full lg:max-w-sm p-6">
+		<div class="rounded-xl bg-amber-600 w-full lg:max-w-sm p-6 shadow-2xl">
 			<h2 class="font-bold mb-3">
 				<span
 					class="inline-block w-30 h-30 bg-center bg-contain bg-no-repeat"
@@ -136,5 +137,12 @@ const title = "Home Page";
 			</p>
 		</div>
 	</div>
+	<div
+		class="flex flex-col px-5 font-extrabold text-5xl leading-tight font-bebas text-green-800 mb-2"
+	>
+		<span class="text-2xl sm:text-3xl md:text-4xl">|</span>
+		<h2 class="text-2xl sm:text-3xl md:text-4xl">HERE I AM</h2>
+	</div>
+	<Location />
 	<Footer />
 </Layout>
