feat: About & image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const title = "Home Page";
 	<div
 		class="flex flex-col lg:flex-row justify-center items-center gap-4 py-10 px-5 relative -mt-65 text-center"
 	>
-		<div class="rounded-xl bg-green-700 w-full lg:max-w-sm p-6 shadow-2xl">
+		<div class="rounded-xl bg-green-700 w-full lg:max-w-sm p-6 shadow-xl">
 			<h2 class="font-bold mb-3">
 				<span
 					class="inline-block w-30 h-30 bg-center bg-contain bg-no-repeat"
@@ -86,7 +86,7 @@ const title = "Home Page";
 				doloremque voluptate ipsam?
 			</p>
 		</div>
-		<div class="rounded-xl bg-blue-300 w-full lg:max-w-sm p-6 shadow-2xl">
+		<div class="rounded-xl bg-blue-300 w-full lg:max-w-sm p-6 shadow-xl">
 			<h2 class="font-bold mb-3">
 				<span
 					class="inline-block w-30 h-30 bg-center bg-contain bg-no-repeat"
@@ -111,7 +111,7 @@ const title = "Home Page";
 				rem cupiditate labore.
 			</p>
 		</div>
-		<div class="rounded-xl bg-amber-600 w-full lg:max-w-sm p-6 shadow-2xl">
+		<div class="rounded-xl bg-amber-600 w-full lg:max-w-sm p-6 shadow-xl">
 			<h2 class="font-bold mb-3">
 				<span
 					class="inline-block w-30 h-30 bg-center bg-contain bg-no-repeat"
