--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -20,7 +20,7 @@ import { Contact } from "lucide-react";
         class="mx-auto flex bg-white w-full justify-between items-center px-4 h-10 font-bebas"
     >
         <div class="flex items-center gap-2">
-            <h1 class="text-xl font-bold text-green-700">logo</h1>
+            <a href="/" class="text-xl font-bold text-green-700">logo</a>
             <!-- Jika untuk gambar -->
             <!-- <img src={astro.src} alt="Logo" class="h-10 w-14" /> -->
             <!-- Jika untuk icon -->
