--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,11 +1,22 @@
 ---
 // import Layout from "../layouts/Layout.astro";
+import { Instagram } from "lucide-react";
+import { Facebook } from "lucide-react";
 ---
 
 <div slot="footer">
-    <div class="bg-green-700 text-white flex items-center justify-center py-4">
-        <p class="text-sm">
-            &copy; {new Date().getFullYear()} Embek Probolinggo Farm
-        </p>
+    <div class="bg-green-700 text-white flex items-center justify-between py-4">
+        <div class="items-center flex gap-4 flex-col px-5">
+            <span class="font-bold text-xl">Logo Embek Probolinggo Farm</span>
+            <div class="flex items-center gap-2">
+                <a href=""><Instagram /></a>
+                <a href=""><Facebook /></a>
+            </div>
+        </div>
+        <div class="text-center flex px-5">
+            <p class="text-sm">
+                &copy; {new Date().getFullYear()} Embek Probolinggo Farm
+            </p>
+        </div>
     </div>
 </div>
