--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -1,11 +1,27 @@
 ---
 import Layout from "../layouts/Layout.astro";
-const title = "About Page";
 import Navbar from "../components/Navbar.astro";
+import Footer from "../components/footer.astro";
+import deadpool from "../assets/deadpoll.jpg";
+const title = "About Page";
 ---
 
 <Layout title={title}>
     <Navbar />
-    <h1 class="text-3xl font-bold underline">This is About Page</h1>
-    <a href="/">Go to Home</a>
+    <div class="max-w-4xl mx-auto pt-5 px-2 relative">
+        <img src={deadpool.src} class="rounded-2xl shadow-2xl w-full" />
+        <div
+            class="absolute bottom-4 text-center
+             md:bottom-4 md:left-4 md:translate-x-0 md:text-left"
+        >
+            <div class="flex flex-col">
+                <h2 class="text-white text-3xl font-bold px-4 py-2 rounded-lg">
+                    Deadpool is Here 🎬
+                </h2>
+                <h3 class="text-white text-2xl font-semibold px-4">hehe</h3>
+            </div>
+        </div>
+    </div>
+    <!-- <a href="/">Go to Home</a> -->
+    <Footer />
 </Layout>
