--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -3,25 +3,55 @@ import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/footer.astro";
 import deadpool from "../assets/deadpoll.jpg";
+import MainCard2 from "../components/MainCard2.astro";
+import Work from "../components/Work.astro";
+import ManualSlider from "../components/ManualSlider";
 const title = "About Page";
 ---
 
 <Layout title={title}>
     <Navbar />
-    <div class="max-w-4xl mx-auto pt-5 px-2 relative">
-        <img src={deadpool.src} class="rounded-2xl shadow-2xl w-full" />
+    <div class="max-w-4xl mx-auto pt-8 px-2 relative">
+        <!-- gambar -->
+        <img
+            src={deadpool.src}
+            class="rounded-2xl shadow-2xl w-full relative z-10"
+        />
+
+        <!-- teks di atas gambar -->
         <div
             class="absolute bottom-4 text-center
-             md:bottom-4 md:left-4 md:translate-x-0 md:text-left"
+               md:bottom-4 md:left-4 md:translate-x-0 md:text-left z-20"
         >
             <div class="flex flex-col">
-                <h2 class="text-white text-3xl font-bold px-4 py-2 rounded-lg">
+                <h2
+                    class="text-white text-3xl font-bold px-4 py-2 rounded-lg font-bebas"
+                >
                     Deadpool is Here 🎬
                 </h2>
-                <h3 class="text-white text-2xl font-semibold px-4">hehe</h3>
+                <h3 class="text-white text-2xl font-semibold px-4 font-bebas">
+                    Meet our-team
+                </h3>
             </div>
         </div>
+
+        <!-- card -->
+        <div
+            class="absolute left-1/3 -translate-x-1/2
+               w-2/4 md:w-1/2
+               rounded-xl bg-amber-300 shadow-xl z-0 -my-5"
+        >
+            <h2 class="p-4 text-center">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Incidunt, ipsam?
+            </h2>
+        </div>
     </div>
+    <div class="max-w-7xl mx-auto mt-50 md:mt-40 relative">
+        <MainCard2 />
+    </div>
+    <!-- <ManualSlider /> -->
+    <!-- <Work /> -->
     <!-- <a href="/">Go to Home</a> -->
-    <Footer />
+    <!-- <Footer /> -->
 </Layout>
