--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -5,6 +5,7 @@ import Footer from "../components/footer.astro";
 import deadpool from "../assets/deadpoll.jpg";
 import MainCard2 from "../components/MainCard2.astro";
 import { Slider } from "../components/Slider";
+import { Testimonial } from "../components/Testimonial";
 const title = "About Page";
 ---
 
@@ -51,7 +52,6 @@ const title = "About Page";
         <MainCard2 />
     </div>
     <Slider client:load />
-    <div class="mt-5">
-        <Footer />
-    </div>
+    <Testimonial client:load />
+    <Footer />
 </Layout>
