feat: add vidio and fix footer

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -45,9 +45,9 @@ import { Contact } from "lucide-react";
                 >breeding</a
             ><span>|</span>
             <a
-                href="#meat"
+                href="#activity"
                 class="text-gray-600 hover:text-green-900 font-semibold text-lg"
-                >meat</a
+                >activity</a
             >
         </nav>
 
