--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -5,18 +5,38 @@ import { Facebook } from "lucide-react";
 ---
 
 <div slot="footer">
-    <div class="bg-green-700 text-white flex items-center justify-between py-4">
-        <div class="items-center flex gap-4 flex-col px-5">
-            <span class="font-bold text-xl">Logo Embek Probolinggo Farm</span>
-            <div class="flex items-center gap-2">
-                <a href=""><Instagram /></a>
-                <a href=""><Facebook /></a>
+    <div class="bg-green-700 text-white py-6">
+        <div
+            class="w-full mx-auto flex flex-col md:flex-row items-center md:items-start justify-between gap-5 px-5"
+        >
+            <!-- {-- logo dan sosial media --} -->
+            <div class="items-center flex gap-4 flex-col md:items-start">
+                <span class="font-bold text-xl"
+                    >Logo Embek Probolinggo Farm</span
+                >
+                <div class="flex items-center gap-2">
+                    <a href=""><Instagram /></a>
+                    <a href=""><Facebook /></a>
+                </div>
             </div>
-        </div>
-        <div class="text-center flex px-5">
-            <p class="text-sm">
-                &copy; {new Date().getFullYear()} Embek Probolinggo Farm
-            </p>
+
+            <!-- {-- alamat --} -->
+            <div class="text-center text-sm flex items-center mt-12">
+                <p>
+                    &copy; {new Date().getFullYear()} Embek Probolinggo Farm All
+                    Rights Reserved
+                </p>
+            </div>
+
+            <!-- {-- kontak --} -->
+            <div
+                class="flex flex-col items-center md:items-end text-sm gap-1"
+                id="contact"
+            >
+                <p class="font-semibold">Contact</p>
+                <p>Email: embekfarm@gmail.com</p>
+                <p>Phone: +62 812-3456-7890</p>
+            </div>
         </div>
     </div>
 </div>
