--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
 import deadpool from "../assets/deadpoll.jpg";
+import farm from "../assets/farm-ico.jpg";
 import Card from "../components/Card.astro";
 import MainCard from "../components/MainCard.astro";
 import Footer from "../components/footer.astro";
 import Location from "../components/Location.astro";
+import Vidio from "../components/Vidio.astro";
 const title = "Home Page";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -17,8 +19,8 @@ const title = "Home Page";
 	<Welcome />
 	<div class="relative h-96 w-full mt-15">
 		<div
-			class="absolute inset-0 bg-cover bg-center opacity-50"
-			style={`background-image: url(${deadpool.src})`}
+			class="absolute -top-5 inset-0 bg-cover bg-center opacity-50 z-0"
+			style={`background-image: url(${farm.src})`}
 		>
 		</div>
 		<div class="absolute inset-0 bg-gradient-to-t from-white"></div>
@@ -35,9 +37,18 @@ const title = "Home Page";
 		</div>
 	</div>
 	<!-- <MainCard2 /> -->
-	<div class="max-w-7xl mx-auto p-6 -mt-25">
+	<!-- <div class="max-w-7xl mx-auto p-6 -mt-25">
 		<MainCard />
+	</div> -->
+	<div
+		class="flex flex-col px-5 font-extrabold text-5xl leading-tight font-bebas text-green-800 mt-10"
+	>
+		<span class="text-2xl sm:text-3xl md:text-4xl">|</span>
+		<h2 class="text-2xl sm:text-3xl md:text-4xl">
+			WHAT THEY SAY ABOUT OUR FARM
+		</h2>
 	</div>
+	<Vidio />
 	<Card />
 	<div class="relative w-full mt-50">
 		<div
