--- a/src/components/Vidio.astro
+++ b/src/components/Vidio.astro
@@ -7,7 +7,7 @@
     <div class="w-full max-w-6xl aspect-video shadow-xl">
         <iframe
             class="w-full h-full rounded-lg"
-            src="https://www.youtube.com/embed/YrPcoAEiMwM?start=1128&hl=id&autoplay=1"
+            src="https://www.youtube.com/embed/YrPcoAEiMwM?start&hl=id"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
