--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -40,11 +40,10 @@ const title = "About Page";
         <div
             class="absolute left-1/3 -translate-x-1/2
                w-2/4 md:w-1/2
-               rounded-xl bg-amber-300 shadow-xl z-0 -my-5"
+               rounded-xl bg-amber-300 shadow-xl z-0 -my-3"
         >
-            <h2 class="p-4 text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Incidunt, ipsam?
+            <h2 class="p-4 text-center text-md font-bold">
+                Your Health, Our Commitment Freshness Delivered Daily
             </h2>
         </div>
     </div>
