feat: fixing image

--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -6,6 +6,7 @@ import deadpool from "../assets/deadpoll.jpg";
 import MainCard2 from "../components/MainCard2.astro";
 import { Slider } from "../components/Slider";
 import { Testimonial } from "../components/Testimonial";
+import people2 from "../assets/farm-3.jpg";
 const title = "About Page";
 ---
 
@@ -13,8 +14,8 @@ const title = "About Page";
     <Navbar />
     <div class="max-w-6xl mx-auto pt-8 px-2 relative">
         <img
-            src={deadpool.src}
-            class="rounded-2xl shadow-2xl w-full relative z-10"
+            src={people2.src}
+            class="rounded-2xl shadow-2xl w-full relative z-10 h-[600px] object-cover"
         />
 
         <!-- teks di atas gambar -->
