--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Navbar from "../components/Navbar.astro";
 import deadpool from "../assets/deadpoll.jpg";
 import farm from "../assets/farm-ico.jpg";
 import Card from "../components/Card.astro";
-import MainCard from "../components/MainCard.astro";
+// import MainCard from "../components/MainCard.astro";
 import Footer from "../components/footer.astro";
 import Location from "../components/Location.astro";
 import Vidio from "../components/Vidio.astro";
