feat: finishing product

--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -28,8 +28,8 @@ import textile from "../assets/textile.jpg";
         <h2 class="text-xl font-bold mb-2">📍 Lokasi Kami</h2>
         <p class="mb-4 text-gray-700">
             Jl. Raya Sukapura No. 722 desa Laweyan Krajan <br />
-            Kec. Sumberasih Kab.Probolinggo <br />
-            Probolinggo, Jawa Timur 67251
+            Kec. Sumberasih Kab.Probolinggo, <br />
+            Probolinggo - Jawa Timur, Kode pos - 67251
         </p>
 
         <h3 class="font-semibold">Jam Operasional</h3>
