--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Footer from "../components/footer.astro";
 import Location from "../components/Location.astro";
 import Vidio from "../components/Vidio.astro";
 const title = "Home Page";
+import hand from "../assets/Handshake.jpg";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
@@ -53,7 +54,7 @@ const title = "Home Page";
 	<div class="relative w-full mt-50">
 		<div
 			class="h-72 bg-cover bg-center opacity-50"
-			style={`background-image: url(${deadpool.src})`}
+			style={`background-image: url(${hand.src})`}
 		>
 		</div>
 		<div class="absolute inset-0 bg-gradient-to-t from-white"></div>
