feat: update about

--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -5,7 +5,8 @@ import Footer from "../components/footer.astro";
 import deadpool from "../assets/deadpoll.jpg";
 import MainCard2 from "../components/MainCard2.astro";
 import { Slider } from "../components/Slider";
-import { Testimonial } from "../components/Testimonial";
+// import { Testimonial } from "../components/Testimonial";
+import Testimonial2 from "../components/Testimonial2.astro";
 import people2 from "../assets/farm-3.jpg";
 const title = "About Page";
 ---
@@ -52,6 +53,7 @@ const title = "About Page";
         <MainCard2 />
     </div>
     <Slider client:load />
-    <Testimonial client:load />
+    <!-- <Testimonial client:load /> -->
+    <Testimonial2 />
     <Footer />
 </Layout>
