feat: fixing product, navbar & add breeding

--- a/src/components/Testimonial2.astro
+++ b/src/components/Testimonial2.astro
@@ -40,15 +40,17 @@ const testimonials: Testimonial[] = [
 
     <!-- Content -->
     <div class="relative z-10 max-w-7xl mx-auto text-center px-4">
-        <p class="text-green-500 uppercase font-semibold tracking-wider mb-2">
-            Our Testimonial
+        <p
+            class="text-green-500 uppercase font-semibold tracking-wider mb-2 font-bebas text-3xl"
+        >
+            Our <span class="text-white text-4xl">Testimonial</span>
         </p>
         <h2 class="text-3xl md:text-4xl font-bold text-white mb-4">
-            Review Client Our Project
+            Review Client Our Products
         </h2>
         <p class="text-gray-300 mb-12">
-            Organic meats, such as beef, chicken, and pork, are raised on farms
-            that adhere to organic standards, meaning the animals
+            Organic fresh milk is sourced from farms that adhere to organic
+            farming practices.
         </p>
 
         <!-- Carousel -->
