--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -41,7 +41,7 @@ const path = Astro.url.pathname.toLowerCase();
                 >PRODUCT</a
             ><span>|</span>
             <a
-                href="#breeding"
+                href="/breeding"
                 class="text-gray-600 hover:text-green-900 font-semibold text-lg"
                 >breeding</a
             ><span>|</span>
@@ -61,15 +61,14 @@ const path = Astro.url.pathname.toLowerCase();
         id="mobileMenu"
         class="md:hidden max-h-0 overflow-hidden transition-all duration-500 ease-in-out bg-white px-4 space-y-2 font-bebas"
     >
-        <a href="/About" class="block py-2 hover:text-green-700 font-semibold"
+        <a href="/about" class="block py-2 hover:text-green-700 font-semibold"
             >ABOUT</a
         >
-        <a
-            href="#services"
-            class="block py-2 hover:text-green-700 font-semibold">PRODUCT</a
+        <a href="/product" class="block py-2 hover:text-green-700 font-semibold"
+            >PRODUCT</a
         >
         <a
-            href="#breeding"
+            href="/breeding"
             class="block py-2 hover:text-green-700 font-semibold">breeding</a
         >
         <a href="#meat" class="block py-2 hover:text-green-700 font-semibold"
