--- a/src/pages/breeding.astro
+++ b/src/pages/breeding.astro
@@ -5,6 +5,8 @@ import Footer from "../components/footer.astro";
 import embek_1 from "../assets/embek-1.jpg";
 import embek_2 from "../assets/embek-2.jpg";
 import embek_3 from "../assets/embek-3.jpg";
+import { BreedingCom } from "../components/BreedingCom";
+import BreedingContent from "../components/BreedingContent.astro";
 const title = "Breeding Page";
 ---
 
@@ -28,11 +30,7 @@ const title = "Breeding Page";
                 but also guarantees high-quality products for our customers.
             </p>
         </div>
-        <img
-            src={embek_1.src}
-            alt=""
-            class="w-full h-full object-cover rounded-lg"
-        />
+        <img src={embek_1.src} class="w-full h-full object-cover rounded-lg" />
         <div class="grid grid-row s-2 gap-4">
             <img
                 src={embek_2.src}
@@ -46,6 +44,24 @@ const title = "Breeding Page";
             />
         </div>
     </div>
-
+    <div
+        class="relative py-40 mb-10 overflow-hidden bg-fixed bg-center bg-cover bg-no-repeat mt-10"
+        style={`background-image: url(${embek_1.src});`}
+    >
+        <div class="inset-0 absolute bg-black/40 z-10"></div>
+        <div class="relative z-10 w-full mx-auto text-center -mt-40 px-4">
+            <h2
+                class="text-4xl md:text-5xl font-bold text-white font-bebas mt-15"
+            >
+                Sustainable Breeding for a Healthier Future
+            </h2>
+            <p class="text-gray-300 mb-12 text-md">
+                Join us in our mission to promote ethical breeding practices
+                that benefit both animals and the environment.
+            </p>
+            <BreedingCom client:load />
+        </div>
+    </div>
+    <BreedingContent />
     <Footer />
 </Layout>
